# hemefm

./: .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml
configs/: config.yaml
configs/experiment/: finetune_b3_lr_1e_3.yaml  finetune_b3_lr_1e_4.yaml  finetune_b3_lr_5e_4.yaml  finetune_b3_nopretrain.yaml  finetune_smoke.yaml  finetune_v3.yaml  finetune_v4_combat.yaml  finetune_v5_dann.yaml  hello_world.yaml  pretrain_base_pressure.yaml  pretrain_real.yaml  pretrain_v3.yaml  pretrain_v3_ddp.yaml  pretrain_v3_tiny.yaml  pretrain_v4_combat.yaml
configs/logger/: csv.yaml  wandb.yaml
configs/model/: hemefm_base.yaml  hemefm_multimodal_base.yaml  hemefm_multimodal_tiny.yaml  hemefm_tiny.yaml
configs/trainer/: default.yaml
docs/: quickstart.md
results/: README.md
results/external_eval/: bootstrap_cis.json  linear_probe_results.json  predictions.tsv  predictions_lambda0.05.tsv  predictions_lambda0.2.tsv  predictions_lambda0.5.tsv  predictions_lambda1.0.tsv  predictions_v2.tsv  predictions_v4_combat.tsv  predictions_v5_dann.tsv
results/finetune/: baselines_results.json  phase4prime_finetune_metrics.csv  phase4prime_v2_metrics.csv
results/issue2_4_rerun/: README.md  coral_537cov_results.json  dann_train_347_ids.txt  dann_val_86_ids.txt  hemefm_drug_spearman_val.json  issue2_pca347_537norm_results.json  issue2_pca347_results.json  pca_external_results.json  pca_zscore_347_537norm_predictions.tsv  pca_zscore_347_external_predictions.tsv  v25_phase1_results.json
results/pretrain_base_173M/: RESULTS.md  hparams.yaml  metrics.csv
results/pretrain_tiny/: RESULTS.md  hparams.yaml  metrics.csv
scripts/: drug_spearman.py  eln_2022_mapper.py  p0_external_pca.py  p0_external_pca_v2.py  p0_fixes.py  quickstart.ps1  quickstart.sh  rerun_coral537.py  rerun_issue2.py  rerun_issue2_v2.py  run_b3_lr_sweep.sh  v25_phase1.py
scripts/download/: __init__.py  _utils.py  cbioportal_beataml.py  depmap_pharmacogenomics.py  geo_series.py  gtex.py  hemap.py  run_all.py  target_aml_gdc.py  ucsc_xena.py
scripts/preprocess/: __init__.py  build_pretrain_corpus.py  hgnc_harmonize.py  rebuild_corpus_combat.py
src/hemefm/: __init__.py  baselines.py  evaluate.py  interpret.py  linear_probe.py  train.py
src/hemefm/lightning_modules/: __init__.py  finetune.py  finetune_adversarial.py  mfm.py
src/hemefm/losses/: __init__.py  cox.py  multitask.py  ordinal.py
src/hemefm/models/: __init__.py  adversarial.py  fusion.py  multimodal.py  transformer.py
src/hemefm/models/heads/: __init__.py  drug.py  eln.py  subtype.py  survival.py
tests/: test_smoke.py
