[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hemefm"
version = "0.0.1"
description = "Pan-myeloid transcriptome foundation model for AML subtyping, ELN 2022 risk, and ex-vivo drug response prediction."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Author Placeholder", email = "placeholder@example.com" }]
keywords = ["AML", "foundation-model", "transcriptome", "multi-task", "ELN-2022", "drug-response"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    # Core DL — PyTorch 2.6+ has cu126 wheels; for RTX 5090 (Blackwell, sm_120)
    # install the cu128 nightly via: uv pip install --pre --index https://download.pytorch.org/whl/nightly/cu128
    "torch>=2.6.0",
    "lightning>=2.5.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "wandb>=0.18.0",

    # Data
    "numpy>=2.0",
    "pandas>=2.2",
    "pyarrow>=17",            # parquet I/O
    "scikit-learn>=1.5",
    "scipy>=1.14",

    # Bio / genomics
    "anndata>=0.10",
    "scanpy>=1.10",
    "pybedtools; sys_platform != 'win32'",   # optional, Linux/Mac only

    # Interpretability
    "captum>=0.7",
    "shap>=0.46",

    # Survival analysis
    "lifelines>=0.29",
    "pycox>=0.3",

    # Stats + plotting
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "statsmodels>=0.14",

    # Utilities
    "rich>=13.7",
    "typer>=0.12",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
]
flash = [
    # Flash Attention 2 — install separately on Linux with matching CUDA toolkit:
    #   uv pip install flash-attn --no-build-isolation
    # On Windows / WSL2 prefer torch.nn.functional.scaled_dot_product_attention (auto-uses Flash).
]

[project.scripts]
hemefm-train = "hemefm.train:main"

[project.urls]
Homepage = "https://github.com/PLACEHOLDER/hemefm"
Issues = "https://github.com/PLACEHOLDER/hemefm/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hemefm"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]            # let formatter handle line length

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
